--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ nav {
     background-color: whitesmoke;
     height:80px;
     width:100%;
-    
     }
 
 ul .navbar {
@@ -36,10 +35,10 @@ nav:hover {
     width: 70px;
     height: 70px;  
 }
-.image {
+/* .image {
     width: 100%;
     height:100%;
-}
+} */
 .texthead {
     background-color : rgba(192, 59, 19, 0.822);
     border: 2px solid rgba(192, 59, 19, 0.822);
